Bug 233735 - kmail deletes text in body instead of subject when pressing Ctrl-K in subject line
Summary: kmail deletes text in body instead of subject when pressing Ctrl-K in subject...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: 1.13.2
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-08 15:03 UTC by Roman Fietze
Modified: 2011-09-12 07:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Fietze 2010-04-08 15:03:32 UTC
Version:           1.13.2 (using KDE 4.4.2)
Installed from:    openSUSE RPMs

Move the cursor to somewhere in the middle of the subject line and press Ctrl-K. On my system this deletes the complete first line of the text body every time I press Ctrl-K instead of deleting to the end of the subject line.

Repeatable: 100%, even deleting more than one body line is possible
Comment 1 Björn Ruberg 2010-04-14 23:04:13 UTC
Confirmed in KDE 4.4.1
Comment 2 Roman Fietze 2010-08-12 11:24:14 UTC
Confirmed in 4.5.0.
Comment 3 Laurent Montel 2011-09-12 07:00:35 UTC
Still valid in 4.7
Comment 4 Laurent Montel 2011-09-12 07:43:05 UTC
Git commit ce1f6e0bb2c7c66f4d1405e850a35d7792bcaa01 by Montel Laurent.
Committed on 12/09/2011 at 09:42.
Pushed by mlaurent into branch 'master'.

Fix Bug 233735 - kmail deletes text in body instead of subject when pressing Ctrl-K in subject line

FIXED-IN: 4.7.2
BUG: 233735

M  +2    -1    kpimtextedit/textedit.cpp

http://commits.kde.org/kdepimlibs/ce1f6e0bb2c7c66f4d1405e850a35d7792bcaa01
Comment 5 Laurent Montel 2011-09-12 07:43:33 UTC
Git commit 06ad2ff7759bdac02bd0a5542155264a17115dc8 by Montel Laurent.
Committed on 12/09/2011 at 09:42.
Pushed by mlaurent into branch '4.7'.

Fix Bug 233735 - kmail deletes text in body instead of subject when pressing Ctrl-K in subject line

FIXED-IN: 4.7.2
BUG: 233735
(cherry picked from commit ce1f6e0bb2c7c66f4d1405e850a35d7792bcaa01)

M  +2    -1    kpimtextedit/textedit.cpp

http://commits.kde.org/kdepimlibs/06ad2ff7759bdac02bd0a5542155264a17115dc8