Fix Bug 233735 - kmail deletes text in body instead of subject when pressing Ctrl-K in subject line

FIXED-IN: 4.7.2
BUG: 233735